fixed mobile spacing issue and adjusted battery progress indicator for other viewports

--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -11,6 +11,7 @@
 
     @include for-lg-mobiles {
         @include sm-container(500px);
+        width: 100% !important;
     }
 
     h1 {
@@ -25,6 +26,8 @@
         @include for-sm-desktops {
             @include lg-container(1110px);
         }
+
+        @include for-lg-mobiles { padding-left: 5%; }
         // clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
     }
     
@@ -62,6 +65,7 @@
             grid-template-columns: repeat(2, 1fr);
             margin-top: 4rem;
             row-gap: 1rem;
+            padding-inline: 5%;
         }
 
         .topic {
